@@ -1,7 +1,14 @@
+2014-05-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* general/shortcut_bar.php: Updated the shortcut bar.
+
+	* include/styles/pandora.css: Added new styles for the
+	shortcut bar elements.
+
 2014-05-08  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
-	* pandora_console/extensions/matrix_events/ajax.php,
-	  pandora_console/extensions/matrix_events.php: Added
+	* extensions/matrix_events/ajax.php,
+	  extensions/matrix_events.php: Added
 	files. New extension to see the latest events like if
 	you were the operator of the Nebuchadnezzar.
 
